update endpoint get_by_keywords now select all object which have the keyword or the name match
